# Alokator

./: CMakeLists.txt  README.md  heap.c  heap.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
